# ollamacode

./: README.md  ROADMAP.md  WEB_QUICKSTART.md  docker-compose.yml  web_ui.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: api.py  main.py  models.py  ollama_client.py
backend/tests/: conftest.py  test_api.py  test_endpoints.py
blueprints/: 00-architecture.md  01-frontend-spec.md  02-orchestration-spec.md  03-intelligence-spec.md
cli/: README.md  pyproject.toml
cli/ollamacode/: main.py
cli/ollamacode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/ollamacode/commands/: auth.py  review.py
cli/tests/: test_cli.py
tools/agentmi/: Blueprint  README.md  agent_ui.py  llama_agent.py  requirements.txt  task.md  test_instructions.md  web_scraper.py
tools/agentmi/specs/: fibonacci.txt  todo_api.txt  web_scraper.txt
workflows/: workflow_steps.js
