[tool.poetry]
name = "ollamacode-backend"
version = "0.1.0"
description = "Intelligence Backend for OllamaCode"
authors = ["OllamaCode Team <hello@ollamacode.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
httpx = "^0.26.0"
sqlmodel = "^0.0.14"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
